# chat_process_service

./: Dockerfile  config.py  conftest.py  deps.py  external_service.py  main.py  pyproject.toml  schemas.py
.github/workflows/: docker-build-push-deploy.yml  push-docker.yml
celery_app/: __init__.py  celeryconfig.py  proccess_chat.py  tasks.py
core/: model.py
qdrant_service/: base.py  service.py  types.py
routers/: pattern.py
test/: test_pattern.py
