[project]
name = "chat-process-service"
version = "0.1.0"
description = ""
authors = [
    {name = "peyro",email = "peyrovskaaa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "celery (>=5.5.3,<6.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "qdrant-client (>=1.15.0,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pytelegrambotapi (>=4.27.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.1.0"
pytest = "^8.4.1"

